@@ -59,6 +59,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12794. Support additional compression levels for GzipCodec.
     (Ravi Mutyala via junping_du)
 
+    HADOOP-12555. WASB to read credentials from a credential provider.
+    (Larry McCay via cnauroth)
+
   OPTIMIZATIONS
 
     HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
